# S.T.B.-OS

./: Cargo.toml  LICENSE  README.md  admiralix_os.json  linker.ld
src/: allocator.rs  commands.rs  fat.rs  gdt.rs  getcpu.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  stbfs.rs  systext.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  getcpu.rs  keyboard.rs  mod.rs  simple_executor.rs
